rules/encrypt-traffic-to-https-load-balancers-with-tls-certificates/test/failed_ingress_annotation_value/input/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rmq-external-service
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
    - name: lb-azure
      protocol: TCP
      port: 15672
      targetPort: 15672
